# GravityFrameWork

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FILE_HEADERS_SUMMARY.md  PRIVATE_REPOS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  TEAM_PROMPT.md  add_file_headers.py  build_release.py  cleanup.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
archive/: ROADMAP_V1.md
docs/: AI_FEATURES.md  AUTONOMOUS_DEVELOPMENT.md  AUTONOMOUS_DEVELOPMENT_FA.md  AUTO_INSTALL_FA.md  COMMIT_MANAGEMENT_FA.md  COMPLETE_FEATURES_FA.md  CONTINUOUS_LEARNING_FA.md  INTERACTIVE_GUIDE_FA.md  MULTI_DATABASE_ACCESS_FA.md  OLLAMA_INSTALL_FA.md
examples/: ai_powered_orchestration.py  auto_ai_install_demo.py  autonomous_development.py  commit_management.py  complete_automation_demo.py  complete_smart_development.py  continuous_learning.py  gravity-service.yaml  interactive_setup_demo.py  multi_database_access.py  project_management.py
examples/sample-auth-service/: .env.example  Dockerfile  README.md  README_FA.md  docker-compose.yml  gravity-service.yaml  requirements.txt
examples/sample-auth-service/app/: __init__.py  config.py  database.py  main.py  models.py
examples/sample-auth-service/app/api/: __init__.py
examples/sample-auth-service/app/api/v1/: __init__.py  auth.py
examples/sample-auth-service/tests/: __init__.py  conftest.py  test_auth.py
gravity_framework/: __init__.py
gravity_framework/ai/: __init__.py  assistant.py  autonomous_dev.py  installer.py  team_generator.py
gravity_framework/cli/: __init__.py  main.py
gravity_framework/core/: __init__.py  framework.py  interactive_guide.py  manager.py
gravity_framework/database/: __init__.py  multi_access.py  orchestrator.py
gravity_framework/deployment/: __init__.py  composer.py
gravity_framework/devops/: __init__.py  automation.py
gravity_framework/discovery/: __init__.py  scanner.py
gravity_framework/documentation/: generator.py
gravity_framework/git/: __init__.py  commit_manager.py  integration.py
gravity_framework/learning/: __init__.py  system.py
gravity_framework/models/: __init__.py  service.py
gravity_framework/project/: __init__.py  manager.py
gravity_framework/resolver/: __init__.py  dependency.py
gravity_framework/standards/: __init__.py  enforcer.py
gravity_framework/testing/: generator.py
tests/: __init__.py  conftest.py  test_ai_assistant.py  test_cli.py  test_commit_manager.py  test_composer.py  test_framework.py  test_framework_coverage.py  test_framework_extended.py  test_integration.py  test_manager.py  test_manager_coverage.py  test_manager_extended.py  test_orchestrator.py  test_orchestrator_coverage.py  test_resolver.py  test_scanner.py  test_scanner_coverage.py  test_start_command.py  test_version_1_0_0.py
